docs-archive/apache-airflow-providers-ssh/4.3.2/_sources/_api/airflow/providers/ssh/hooks/ssh/index.rst.txt
airflow.providers.ssh.hooks.ssh
===============================

.. py:module:: airflow.providers.ssh.hooks.ssh

.. autoapi-nested-parse::

   Hook for SSH connections.



Attributes
----------

.. autoapisummary::

   airflow.providers.ssh.hooks.ssh.CMD_TIMEOUT


Classes
-------

.. autoapisummary::

   airflow.providers.ssh.hooks.ssh.SSHHook
   airflow.providers.ssh.hooks.ssh.SSHHookAsync


Functions
---------

.. autoapisummary::

   airflow.providers.ssh.hooks.ssh.is_arg_set


Module Contents
---------------

.. py:function:: is_arg_set(value)

.. py:data:: CMD_TIMEOUT
   :value: 10


.. py:class:: SSHHook(ssh_conn_id = None, remote_host = '', username = None, password = None, key_file = None, port = None, conn_timeout = None, cmd_timeout = NOTSET, keepalive_interval = 30, banner_timeout = 30.0, disabled_algorithms = None, ciphers = None, auth_timeout = None, host_proxy_cmd = None)

   Bases: :py:obj:`airflow.providers.common.compat.sdk.BaseHook`


   Execute remote commands with Paramiko.

   .. seealso:: https://github.com/paramiko/paramiko

   This hook also lets you create ssh tunnel and serve as basis for SFTP file transfer.

   :param ssh_conn_id: :ref:`ssh connection id<howto/connection:ssh>` from airflow
       Connections from where all the required parameters can be fetched like
       username, password or key_file, though priority is given to the
       params passed during init.
   :param remote_host: remote host to connect
   :param username: username to connect to the remote_host
   :param password: password of the username to connect to the remote_host
   :param key_file: path to key file to use to connect to the remote_host
   :param port: port of remote host to connect (Default is paramiko SSH_PORT)
   :param conn_timeout: timeout (in seconds) for the attempt to connect to the remote_host.
       The default is 10 seconds. If provided, it will replace the `conn_timeout` which was
       predefined in the connection of `ssh_conn_id`.
   :param cmd_timeout: timeout (in seconds) for executing the command. The default is 10 seconds.
       Nullable, `None` means no timeout. If provided, it will replace the `cmd_timeout`
       which was predefined in the connection of `ssh_conn_id`.
   :param keepalive_interval: send a keepalive packet to remote host every
       keepalive_interval seconds
   :param banner_timeout: timeout to wait for banner from the server in seconds
   :param disabled_algorithms: dictionary mapping algorithm type to an
       iterable of algorithm identifiers, which will be disabled for the
       lifetime of the transport
   :param ciphers: list of ciphers to use in order of preference
   :param auth_timeout: timeout (in seconds) for the attempt to authenticate with the remote_host


   .. py:attribute:: conn_name_attr
      :value: 'ssh_conn_id'



   .. py:attribute:: default_conn_name
      :value: 'ssh_default'



   .. py:attribute:: conn_type
      :value: 'ssh'



   .. py:attribute:: hook_name
      :value: 'SSH'



   .. py:method:: get_ui_field_behaviour()
      :classmethod:


      Return custom UI field behaviour for SSH connection.



   .. py:attribute:: ssh_conn_id
      :value: None



   .. py:attribute:: remote_host
      :value: ''



   .. py:attribute:: username
      :value: None



   .. py:attribute:: password
      :value: None



   .. py:attribute:: key_file
      :value: None



   .. py:attribute:: pkey
      :value: None



   .. py:attribute:: port
      :value: None



   .. py:attribute:: conn_timeout
      :value: None



   .. py:attribute:: cmd_timeout


   .. py:attribute:: keepalive_interval
      :value: 30



   .. py:attribute:: banner_timeout
      :value: 30.0



   .. py:attribute:: disabled_algorithms
      :value: None



   .. py:attribute:: ciphers
      :value: None



   .. py:attribute:: host_proxy_cmd
      :value: None



   .. py:attribute:: auth_timeout
      :value: None



   .. py:attribute:: compress
      :value: True



   .. py:attribute:: no_host_key_check
      :value: True



   .. py:attribute:: allow_host_key_change
      :value: False



   .. py:attribute:: host_key
      :value: None



   .. py:attribute:: look_for_keys
      :value: True



   .. py:attribute:: client
      :type:  paramiko.SSHClient | None
      :value: None



   .. py:property:: host_proxy
      :type: paramiko.ProxyCommand | None



   .. py:method:: get_conn()

      Establish an SSH connection to the remote host.



   .. py:method:: get_tunnel(remote_port, remote_host = 'localhost', local_port = None)

      Create a tunnel between two hosts.

      This is conceptually similar to ``ssh -L <LOCAL_PORT>:host:<REMOTE_PORT>``.

      :param remote_port: The remote port to create a tunnel to
      :param remote_host: The remote host to create a tunnel to (default localhost)
      :param local_port:  The local port to attach the tunnel to

      :return: sshtunnel.SSHTunnelForwarder object



   .. py:method:: exec_ssh_client_command(ssh_client, command, get_pty, environment, timeout = NOTSET)


   .. py:method:: test_connection()

      Test the ssh connection by execute remote bash commands.



.. py:class:: SSHHookAsync(ssh_conn_id = default_conn_name, host = None, port = None, username = None, password = None, known_hosts = default_known_hosts, key_file = '', passphrase = '', private_key = '')

   Bases: :py:obj:`airflow.providers.common.compat.sdk.BaseHook`


   Asynchronous SSH hook using asyncssh for use in triggers.

   This hook provides async SSH connectivity for deferrable operators
   and their triggers.

   :param ssh_conn_id: SSH connection ID from Airflow Connections
   :param host: hostname of the SSH server (overrides connection)
   :param port: port of the SSH server (overrides connection)
   :param username: username for authentication (overrides connection)
   :param password: password for authentication (overrides connection)
   :param known_hosts: path to known_hosts file. Defaults to ``~/.ssh/known_hosts``.
   :param key_file: path to private key file for authentication
   :param passphrase: passphrase for the private key
   :param private_key: private key content as string


   .. py:attribute:: conn_name_attr
      :value: 'ssh_conn_id'



   .. py:attribute:: default_conn_name
      :value: 'ssh_default'



   .. py:attribute:: conn_type
      :value: 'ssh'



   .. py:attribute:: hook_name
      :value: 'SSH'



   .. py:attribute:: default_known_hosts
      :value: '~/.ssh/known_hosts'



   .. py:attribute:: ssh_conn_id
      :value: 'ssh_default'



   .. py:attribute:: host
      :value: None



   .. py:attribute:: port
      :value: None



   .. py:attribute:: username
      :value: None



   .. py:attribute:: password
      :value: None



   .. py:attribute:: known_hosts
      :type:  bytes | str


   .. py:attribute:: key_file
      :value: ''



   .. py:attribute:: passphrase
      :value: ''



   .. py:attribute:: private_key
      :value: ''



   .. py:method:: run_command(command, timeout = None)
      :async:


      Execute a command on the remote host asynchronously.

      :param command: The command to execute
      :param timeout: Optional timeout in seconds
      :return: Tuple of (exit_code, stdout, stderr)



   .. py:method:: run_command_output(command, timeout = None)
      :async:


      Execute a command and return stdout.

      :param command: The command to execute
      :param timeout: Optional timeout in seconds
      :return: stdout as string



